--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-cache": "^0.4.6",
+    "gulp-clean": "^0.3.2",
+    "gulp-collector": "^0.1.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^8.0.0",
     "gulp-ruby-sass": "^2.1.1",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-watch-path": "^0.1.0",
-    "stream-combiner2": "^1.1.1"
+    "imagemin-pngquant": "^5.0.1",
+    "stream-combiner2": "^1.1.1",
+    "sync": "^0.2.5"
   }
 }
